makes sure terms container has a lower z-index when not visible, and a higher z-index when visible. by not doing this, depending on screen size, the container would prevent the contact/social buttons from being accessed.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -131,7 +131,7 @@ textarea {
   background: rgba(47, 49, 44, 0.95);
   color: #fff;
   text-align: left;
-  z-index: 9999;
+  z-index: -1;
   overflow: hidden;
   opacity: 0;
   width: 0;
@@ -148,6 +148,7 @@ textarea {
     display: block;
     opacity: 1;
     width: 100%;
+    z-index: 9999;
     .scroll-wrap {
       height: 100%;
       width: 100%;
